# talkback-api

./: .gitignore  AWS_BEDROCK_SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTIMODAL_EXAMPLES.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  START_HERE.txt  START_SERVER.sh  TOOL_CALLING.md  TTS_ALTERNATIVE_IMPLEMENTATION.py  TTS_README.md  TTS_SETUP.md  config.py  find_kb_all_regions.py  find_kb_region.py  minimal-bedrock-policy.json  package-lock.json  pyproject.toml  start.sh  test_aws_setup.py  test_kb_connection.py  test_tools.py  test_tts.py  test_tts_quick.py
.github/: copilot-instructions.md
.github/workflows/: update-docs.yaml
app/: auth.py  config.py  main.py
app/admin/: router.py
app/applicants/: models.py  router.py  schemas.py
app/auth/: __init__.py  router.py
app/cases/: models.py  router.py  schemas.py  services.py
app/chat/: __init__.py  models.py  router.py  schemas.py  services.py  tools.py
app/tts/: router.py  schemas.py
app/users/: router.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 544af708772a_add_chat_and_message_tables.py
tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_config.py  test_db.py  test_tts.py  test_users.py
